; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_2l.c_evtchn_2l_is_pending.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_2l.c_evtchn_2l_is_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shared_info = type { i32* }

@HYPERVISOR_shared_info = common dso_local global %struct.shared_info* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @evtchn_2l_is_pending to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @evtchn_2l_is_pending(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.shared_info*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.shared_info*, %struct.shared_info** @HYPERVISOR_shared_info, align 8
  store %struct.shared_info* %4, %struct.shared_info** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = load %struct.shared_info*, %struct.shared_info** %3, align 8
  %7 = getelementptr inbounds %struct.shared_info, %struct.shared_info* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  %10 = call i32 @BM(i32* %9)
  %11 = call i32 @sync_test_bit(i32 %5, i32 %10)
  ret i32 %11
}

declare dso_local i32 @sync_test_bit(i32, i32) #1

declare dso_local i32 @BM(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
